--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 			</div>
 			<div>
 				<picture>
-				<source media="(min-width: 1920px)" width="700" height="870" srcset="./img/hotel.png" type="image/png">
-				<source media="(min-width: 768px)" width="708" height="708" srcset="./img/hotel.png" type="image/png">
-			  <img class="about-img" src="./img/hotel.png" alt="Hotel" width="260" height="280">
+				<source media="(min-width: 1920px)" width="700" height="870" srcset="img/hotel.png" type="image/png">
+				<source media="(min-width: 768px)" width="708" height="708" srcset="img/hotel.png" type="image/png">
+			  <img class="about-img" src="img/hotel.png" alt="Hotel" width="260" height="280">
 	      </picture>
 			</div>
 		</div>
@@ -42,9 +42,9 @@
 			<div class="room-wrapper">
 			  <div class="room">
 					<picture>
-						<source media="(min-width: 1920px)" width="540" height="540" srcset="./img/room-budjet.png" type="image/png">
-						<source media="(min-width: 768px)" width="708" height="708" srcset="./img/room-budjet.png" type="image/png">
-						<img class="room-img" src="./img/room-budjet.png" alt="Hotel" width="260" height="260">
+						<source media="(min-width: 1920px)" width="540" height="540" srcset="img/room-budjet.png" type="image/png">
+						<source media="(min-width: 768px)" width="708" height="708" srcset="img/room-budjet.png" type="image/png">
+						<img class="room-img" src="img/room-budjet.png" alt="Hotel" width="260" height="260">
 					</picture>
 				  	<h3 class="room-title">Standard Room</h3>
 				  	<p class="room-description">A cozy room with one double bed, equipped with everything necessary for a comfortable stay.</p>
@@ -52,9 +52,9 @@
 			  </div>
 			  <div class="room">
 					<picture>
-						<source media="(min-width: 1920px)" width="300" height="300" srcset="./img/room-lux.png" type="image/png">
-						<source media="(min-width: 768px)" width="300" height="300" srcset="./img/room-lux.png" type="image/png">
-						<img class="room-img" src="./img/room-lux.png" alt="Hotel" width="260" height="280">
+						<source media="(min-width: 1920px)" width="300" height="300" srcset="img/room-lux.png" type="image/png">
+						<source media="(min-width: 768px)" width="300" height="300" srcset="img/room-lux.png" type="image/png">
+						<img class="room-img" src="img/room-lux.png" alt="Hotel" width="260" height="280">
 					</picture>
 					  <h3 class="room-title">Luxury</h3>
 					  <p class="room-description">A spacious suite with a separate living room. Perfect for a romantic getaway.</p>
