--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
 			<div class="logo">
 					<a class="logo-header" href="index.html">HotelTropicano</a>
 			</div>
-			<nav class="main-nav">
-					<ul>
-							<li><a href="#about">About us</a></li>
-							<li><a href="#rooms">Rooms</a></li>
-							<li><a href="#services">Services</a></li>
-							<li><a href="#contact">Contacts</a></li>
-					</ul>
-			</nav>
-	</header>
+			<div class="menu-icon" id="menu-icon">
+				<img class="menu-img" src="img/menu.svg" alt="Меню" id="menu-img" width="20" height="20">
+		  </div>
+  </header>
+  <nav class="dropdown-menu" id="dropdown-menu">
+		<div class="close-icon" id="close-icon">
+				<img src="img/close.svg" alt="Закрыть" width="20" height="20">
+		</div>
+				<ul>
+					<li><a href="#about">About us</a></li>
+					<li><a href="#rooms">Rooms</a></li>
+					<li><a href="#services">Services</a></li>
+					<li><a href="#contact">Contacts</a></li>
+				</ul>
+	</nav>
 <div class="background-container">
 	<section class="welcome-section">
 		<div class="about-wrapper">
@@ -130,5 +136,6 @@
 			</div>
 		</div>
 	</footer>
+	<script src="script.js"></script>
 </body>
 </html>
