--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
 					<a class="logo-header" href="index.html">HotelTropicano</a>
 			</div>
 			<div class="menu-icon" id="menu-icon">
-				<img class="menu-img" src="img/menu.svg" alt="Меню" id="menu-img" width="20" height="20">
+				<img  src="img/menu.svg" alt="Меню" id="menu-img" width="20" height="20">
 		  </div>
-  </header>
-  <nav class="dropdown-menu" id="dropdown-menu">
-		<div class="close-icon" id="close-icon">
-				<img src="img/close.svg" alt="Закрыть" width="20" height="20">
-		</div>
+
+   <nav class="dropdown-menu" id="dropdown-menu">
+		  <div class="close-icon" id="close-icon">
+				<img class="menu-img" src="img/close.svg" alt="Закрыть" width="20" height="20">
+		  </div>
 				<ul>
 					<li><a href="#about">About us</a></li>
 					<li><a href="#rooms">Rooms</a></li>
 					<li><a href="#services">Services</a></li>
 					<li><a href="#contact">Contacts</a></li>
 				</ul>
-	</nav>
+	  </nav>
+  </header>
 <div class="background-container">
 	<section class="welcome-section">
 		<div class="about-wrapper">
